# kmer-profile-decomposer

./: .gitpod.yml  LICENSE  README.md  demo.py.ipynb  pyproject.toml
.github/workflow/: run_pytest.yml
dev/: requirements.txt
sandbox/: histogram.tsv  test.ipynb
src/kmer_profile_decomposer/: __init__.py  decomposer.py
tests/: integration_test.py
tests/output/: log_probablities.tsv
